--- a/index.html
+++ b/index.html
@@ -174,6 +174,24 @@ document.addEventListener('DOMContentLoaded', function() {
     }
   });
 
+  // =========================
+  // Carousel Postback 监听 JS
+  // =========================
+  window.addEventListener('bp-webchat-ready', function() {
+    window.botpressWebChat.onEvent(function(event) {
+      if(event.type === 'postback' && event.payload?.sub) {
+        // 打开对应子页面
+        window.open(event.payload.url, '_blank');
+        // 显示欢迎消息
+        window.botpressWebChat.sendEvent({
+          type: 'proactive-trigger',
+          channel: 'web',
+          payload: { text: event.payload.welcome }
+        });
+      }
+    });
+  });
+
 });
 </script>
 
