--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Retail Pro Prism</title>
+<title>SubMain1 - Retail Pro Prism</title>
 <link rel="icon" type="image/png" href="https://josephteo79.github.io/shared-library/v1.0/icon/favicon.png">
 <link rel="stylesheet" href="https://josephteo79.github.io/shared-library/v1.0/css/treeview.css">
 <link rel="stylesheet" href="https://josephteo79.github.io/shared-library/v1.0/css/tab-style.css">
 <link rel="stylesheet" href="https://josephteo79.github.io/shared-library/v1.0/css/future-updates.css">
 <link rel="stylesheet" href="https://josephteo79.github.io/shared-library/v1.0/css/style1.css">
+
 <!-- PDF.js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
 <script>
 pdfjsLib.GlobalWorkerOptions.workerSrc = "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.worker.min.js";
 </script>
+
 <!-- Lunr.js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lunr.js/2.3.9/lunr.min.js"></script>
 
 <style>
   #bot-button { position:fixed; bottom:90px; right:20px; z-index:1000; background:#007bff; color:#fff; border:none; border-radius:50%; width:60px; height:60px; font-size:24px; cursor:pointer; }
-  #bot-iframe { position:fixed; bottom:160px; right:20px; width:400px; height:500px; border:1px solid #ccc; border-radius:8px; display:none; z-index:999; }
+  #bot-iframe { position:fixed; bottom:160px; right:20px; width:400px; height:500px; border:1px solid #ccc; border-radius:8px; z-index:999; }
 </style>
 </head>
 <body>
@@ -38,8 +40,8 @@ pdfjsLib.GlobalWorkerOptions.workerSrc = "https://cdnjs.cloudflare.com/ajax/libs
     <h2>Retail Pro Prism</h2>
   </div>
   <ul>
-    <li> <a href="#" data-url="introduction.html" class="nav-link">
-      <img src="https://josephteo79.github.io/shared-library/v1.0/icon/pdf.png" class="image">Introduction </a> </li>
+    <li><a href="#" data-url="introduction.html" class="nav-link">
+      <img src="https://josephteo79.github.io/shared-library/v1.0/icon/pdf.png" class="image">Introduction</a></li>
     <li><span class="caret">Front Office</span>
       <ul class="nested">
         <li><a href="#" data-url="FrontOffice/POS_Training_Document.pdf" class="nav-link"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/pdf.png" class="image">POS Training Document</a></li>
@@ -78,8 +80,7 @@ pdfjsLib.GlobalWorkerOptions.workerSrc = "https://cdnjs.cloudflare.com/ajax/libs
     </div>
     <div id="left-menu-scroll">
       <ul>
-        <li> <a href="#" data-url="introduction.html" class="nav-link">
-          <img src="https://josephteo79.github.io/shared-library/v1.0/icon/pdf.png" class="image">Introduction </a> </li>
+        <li><a href="#" data-url="introduction.html" class="nav-link"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/pdf.png" class="image">Introduction</a></li>
         <li><span class="caret"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/folder.jpg" class="image">Front Office</span>
           <ul class="nested">
             <li><a href="#" data-url="FrontOffice/POS_Training_Document.pdf" class="nav-link"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/pdf.png" class="image">POS Training Document</a></li>
@@ -121,7 +122,10 @@ pdfjsLib.GlobalWorkerOptions.workerSrc = "https://cdnjs.cloudflare.com/ajax/libs
 
 <!-- Botpress -->
 <button id="bot-button">💬</button>
-<iframe id="bot-iframe"></iframe>
+<iframe
+  id="bot-iframe"
+  src="https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json&pageId=submain1">
+</iframe>
 
 <!-- JS 文件 -->
 <script src="https://josephteo79.github.io/shared-library/v1.0/js/tab_search.js"></script>
@@ -163,32 +167,24 @@ document.addEventListener('DOMContentLoaded', function() {
   // Botpress Button
   const botButton = document.getElementById('bot-button');
   const botIframe = document.getElementById('bot-iframe');
-  const botUrl = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
   let botLoaded = false;
   botButton.addEventListener('click', () => {
     if (botIframe.style.display === 'none') {
-      if (!botLoaded) { botIframe.src = botUrl; botLoaded = true; }
-      botIframe.style.display = 'block';
+      if (!botLoaded) { botIframe.style.display = 'block'; botLoaded = true; }
+      else botIframe.style.display = 'block';
     } else {
       botIframe.style.display = 'none';
     }
   });
 
   // =========================
-  // Carousel Postback 监听 JS
+  // Botpress 自动欢迎消息
   // =========================
   window.addEventListener('bp-webchat-ready', function() {
-    window.botpressWebChat.onEvent(function(event) {
-      if(event.type === 'postback' && event.payload?.sub) {
-        // 打开对应子页面
-        window.open(event.payload.url, '_blank');
-        // 显示欢迎消息
-        window.botpressWebChat.sendEvent({
-          type: 'proactive-trigger',
-          channel: 'web',
-          payload: { text: event.payload.welcome }
-        });
-      }
+    window.botpressWebChat.sendEvent({
+      type: 'proactive-trigger',
+      channel: 'web',
+      payload: { text: 'Welcome to SubMain1!' }
     });
   });
 
