--- a/index.html
+++ b/index.html
@@ -10,18 +10,9 @@
 <link rel="stylesheet" href="https://josephteo79.github.io/shared-library/v1.0/css/future-updates.css">
 <link rel="stylesheet" href="https://josephteo79.github.io/shared-library/v1.0/css/style1.css">
 
-<!-- PDF.js -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
-<script>
-pdfjsLib.GlobalWorkerOptions.workerSrc = "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.worker.min.js";
-</script>
-
-<!-- Lunr.js -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lunr.js/2.3.9/lunr.min.js"></script>
-
 <style>
   #bot-button { position:fixed; bottom:90px; right:20px; z-index:1000; background:#007bff; color:#fff; border:none; border-radius:50%; width:60px; height:60px; font-size:24px; cursor:pointer; }
-  #bot-iframe { position:fixed; bottom:160px; right:20px; width:400px; height:500px; border:1px solid #ccc; border-radius:8px; z-index:999; }
+  #bot-iframe { position:fixed; bottom:160px; right:20px; width:400px; height:500px; border:1px solid #ccc; border-radius:8px; display:none; z-index:999; }
 </style>
 </head>
 <body>
@@ -33,161 +24,56 @@ pdfjsLib.GlobalWorkerOptions.workerSrc = "https://cdnjs.cloudflare.com/ajax/libs
   <button id="hamburger">&#9776;</button>
 </div>
 
-<!-- MOBILE DRAWER -->
-<div id="mobile-drawer">
-  <div class="drawer-header">
-    <img src="https://josephteo79.github.io/shared-library/v1.0/icon/Integrated_Retail_Logo.png" class="drawer-logo">
-    <h2>Retail Pro Prism</h2>
+<!-- LEFT MENU (保留原有结构) -->
+<div id="left-pane">
+  <div class="header-title">
+    <img src="https://josephteo79.github.io/shared-library/v1.0/icon/Integrated_Retail_Logo.png" class="header-icon">
   </div>
-  <ul>
-    <li><a href="#" data-url="introduction.html" class="nav-link">
-      <img src="https://josephteo79.github.io/shared-library/v1.0/icon/pdf.png" class="image">Introduction</a></li>
-    <li><span class="caret">Front Office</span>
-      <ul class="nested">
-        <li><a href="#" data-url="FrontOffice/POS_Training_Document.pdf" class="nav-link"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/pdf.png" class="image">POS Training Document</a></li>
-        <li><a href="#" data-title="Login Logout" data-resource="FrontOffice/Login_Logout" class="nav-link"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/pdf.png" class="image">Login Logout</a></li>
-        <li><a href="#" data-title="Open Register" data-resource="FrontOffice/Open_Register" class="nav-link"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/pdf.png" class="image">Open Register</a></li>
-      </ul>
-    </li>
-    <li><span class="caret">Back Office</span>
-      <ul class="nested"></ul>
-    </li>
-    <li><a href="#" data-url="notebooklm.html" class="nav-link"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/NoteBooklm.png" class="image">Support Handbook</a></li>
-  </ul>
-
-  <div class="future-updates">
-    <div class="icon">🚀</div>
-    <h2 class="title">More Content Coming Soon</h2>
-    <p class="subtitle">Stay tuned for updates!</p>
-  </div>
-
-  <div class="bottom-area">
-    <div id="floating-widget-left">
-      <a href="https://integratedretail.com/" target="_blank"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/favicon.png" alt="Company"></a>
-      <a href="https://wa.me/6589467929" target="_blank"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/whatsapp.png" alt="WhatsApp"></a>
-      <a href="mailto:joseph.teo@integratedretail.com"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/email.png" alt="Email"></a>
-      <a href="https://integratedretail.raiseaticket.com/"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/raiseaticket.png" alt="RaiseATicket"></a>
-    </div>
-    <h2 class="footer-title">Retail Pro Prism</h2>
+  <div id="left-menu-scroll">
+    <ul>
+      <li><a href="#" data-url="FrontOffice/POS_Training_Document.pdf" class="nav-link">POS Training Document</a></li>
+      <li><a href="#" data-title="Login Logout" data-resource="FrontOffice/Login_Logout" class="nav-link">Login Logout</a></li>
+      <li><a href="#" data-title="Open Register" data-resource="FrontOffice/Open_Register" class="nav-link">Open Register</a></li>
+    </ul>
   </div>
 </div>
-
-<!-- MAIN CONTAINER -->
-<div id="container">
-  <div id="left-pane">
-    <div class="header-title">
-      <img src="https://josephteo79.github.io/shared-library/v1.0/icon/Integrated_Retail_Logo.png" class="header-icon">
-    </div>
-    <div id="left-menu-scroll">
-      <ul>
-        <li><a href="#" data-url="introduction.html" class="nav-link"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/pdf.png" class="image">Introduction</a></li>
-        <li><span class="caret"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/folder.jpg" class="image">Front Office</span>
-          <ul class="nested">
-            <li><a href="#" data-url="FrontOffice/POS_Training_Document.pdf" class="nav-link"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/pdf.png" class="image">POS Training Document</a></li>
-            <li><a href="#" data-title="Login Logout" data-resource="FrontOffice/Login_Logout" class="nav-link"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/pdf.png" class="image">Login Logout</a></li>
-            <li><a href="#" data-title="Open Register" data-resource="FrontOffice/Open_Register" class="nav-link"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/pdf.png" class="image">Open Register</a></li>
-          </ul>
-        </li>
-        <li><span class="caret"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/folder.jpg" class="image">Back Office</span>
-          <ul class="nested"></ul>
-        </li>
-        <li><a href="#" data-url="notebooklm.html" class="nav-link"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/NoteBooklm.png" class="image">Support Handbook</a></li>
-      </ul>
-
-      <div class="future-updates">
-        <div class="icon">🚀</div>
-        <h2 class="title">More Content Coming Soon</h2>
-        <p class="subtitle">Stay tuned for updates!</p>
-      </div>
-    </div>
-    <div class="bottom-area">
-      <div id="floating-widget-left">
-        <a href="https://integratedretail.com/" target="_blank"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/favicon.png" alt="Company"></a>
-        <a href="https://wa.me/6589467929" target="_blank"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/whatsapp.png" alt="WhatsApp"></a>
-        <a href="mailto:joseph.teo@integratedretail.com"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/email.png" alt="Email"></a>
-        <a href="https://integratedretail.raiseaticket.com/"><img src="https://josephteo79.github.io/shared-library/v1.0/icon/raiseaticket.png" alt="RaiseATicket"></a>
-      </div>
-      <h2 class="footer-title">Retail Pro Prism</h2>
-    </div>
-  </div>
-  <div id="divider"></div>
-  <div id="right-pane">
-    <div id="tab-bar"></div>
-    <div id="tab-content"></div>
-  </div>
-</div>
-
-<!-- Tidio 浮窗 -->
-<div id="tidio-container"></div>
 
 <!-- Botpress -->
 <button id="bot-button">💬</button>
-<iframe
-  id="bot-iframe"
-  src="https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json&pageId=submain1">
-</iframe>
-
-<!-- JS 文件 -->
-<script src="https://josephteo79.github.io/shared-library/v1.0/js/tab_search.js"></script>
-<script src="https://josephteo79.github.io/shared-library/v1.0/js/treeview.js"></script>
-<script src="https://josephteo79.github.io/shared-library/v1.0/js/shortcut.js"></script>
+<iframe id="bot-iframe"></iframe>
 
 <script>
 document.addEventListener('DOMContentLoaded', function() {
-  // 初始化 Introduction tab
-  openTab('Introduction', 'introduction.html');
-
-  // Tidio
-  window.tidioChatApi = window.tidioChatApi || {};
-  window.tidioChatApi.display = true;
-  (function() {
-    var tidioScript = document.createElement("script");
-    tidioScript.src = "https://code.tidio.co/el1smokzuytb5rnzo3sfug7mgtwdxcry.js";
-    tidioScript.async = true;
-    document.body.appendChild(tidioScript);
-  })();
-
-  // Hamburger drawer
-  const hamburger = document.getElementById('hamburger');
-  const drawer = document.getElementById('mobile-drawer');
-  if (hamburger && drawer) {
-    hamburger.addEventListener('click', () => drawer.classList.toggle('open'));
-  }
-  drawer.querySelectorAll('.caret').forEach(caret => {
-    caret.addEventListener('click', e => {
-      e.stopPropagation();
-      const nested = caret.nextElementSibling;
-      if (nested) nested.classList.toggle('nested-open');
-    });
-  });
-  drawer.querySelectorAll('a.nav-link').forEach(link => {
-    link.addEventListener('click', () => drawer.classList.remove('open'));
-  });
-
-  // Botpress Button
+  // Botpress 初始化
   const botButton = document.getElementById('bot-button');
   const botIframe = document.getElementById('bot-iframe');
+  const botUrl = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
   let botLoaded = false;
+
   botButton.addEventListener('click', () => {
-    if (botIframe.style.display === 'none') {
-      if (!botLoaded) { botIframe.style.display = 'block'; botLoaded = true; }
-      else botIframe.style.display = 'block';
+    if(botIframe.style.display === 'none') {
+      if(!botLoaded) {
+        botIframe.src = botUrl;
+        botLoaded = true;
+      }
+      botIframe.style.display = 'block';
     } else {
       botIframe.style.display = 'none';
     }
   });
 
-  // =========================
-  // Botpress 自动欢迎消息
-  // =========================
-  window.addEventListener('bp-webchat-ready', function() {
-    window.botpressWebChat.sendEvent({
-      type: 'proactive-trigger',
-      channel: 'web',
-      payload: { text: 'Welcome to SubMain1!' }
-    });
-  });
+  // 当 Botpress Webchat 加载完成后，发送欢迎消息
+  window.addEventListener('message', function(event) {
+    if(!event.data || !event.data.type) return;
 
+    if(event.data.type === 'webchat-ready') {
+      // 发送 welcome 到 botpress
+      botIframe.contentWindow.postMessage({
+        type: 'proactive-trigger',
+        payload: { text: 'Welcome to SubMain1!' }
+      }, '*');
+    }
+  });
 });
 </script>
 
