--- a/index.html
+++ b/index.html
@@ -6,22 +6,40 @@
   <title>SubMain1 - Retail Pro Prism</title>
   <style>
     body { font-family: Arial, sans-serif; }
-    #bot-iframe { width:400px; height:500px; border:1px solid #ccc; border-radius:8px; display:block; }
+    #bot-button { position: fixed; bottom: 20px; right: 20px; width: 60px; height: 60px; border-radius: 50%; background: #007bff; color: white; font-size: 24px; border: none; cursor: pointer; z-index: 1000; }
   </style>
 </head>
 <body>
   <h1>SubMain1 Page</h1>
   <p>这里是 SubMain1 内容。</p>
 
-  <!-- Botpress iframe -->
-  <iframe id="bot-iframe"></iframe>
+  <!-- Botpress Webchat 按钮 -->
+  <button id="bot-button">💬</button>
 
+  <!-- Botpress JS -->
+  <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
   <script>
-    // iframe 指向 shareable.html，ConfigUrl 对应你的 shareable.json
-    const botUrl = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
+    const entry = "submain1"; // 可改成 "RetailPro"/"Cegid"/"footfall"
 
-    const botIframe = document.getElementById('bot-iframe');
-    botIframe.src = botUrl;
+    let webchatInitialized = false;
+
+    document.getElementById('bot-button').addEventListener('click', () => {
+      if (!webchatInitialized) {
+        window.botpressWebChat.init({
+          botId: "YOUR_BOT_ID", // <-- 替换成你的 Bot ID
+          hostUrl: "https://cdn.botpress.cloud",
+          messagingUrl: "https://messaging.botpress.cloud",
+          extraProperties: {
+            entry: entry
+          },
+          showPoweredBy: false,
+          enableConversationDeletion: false
+        });
+        webchatInitialized = true;
+      }
+      // 打开/关闭 Webchat
+      window.botpressWebChat.toggle();
+    });
   </script>
 </body>
 </html>
