--- a/index.html
+++ b/index.html
@@ -1,87 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SubMain1 - Retail Pro Prism</title>
-<style>
-  body { font-family: Arial, sans-serif; }
-  #bot-button {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background: #007bff;
-    color: white;
-    font-size: 24px;
-    border: none;
-    cursor: pointer;
-    z-index: 1000;
-  }
-  #bot-iframe {
-    position: fixed;
-    bottom: 90px;
-    right: 20px;
-    width: 400px;
-    height: 500px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    display: none;
-    z-index: 999;
-  }
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SubMain - Retail Pro Prism</title>
+  <style>
+    body { font-family: Arial, sans-serif; }
+    #bot-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      background: #007bff;
+      color: white;
+      font-size: 24px;
+      border: none;
+      cursor: pointer;
+      z-index: 1000;
+    }
+    #bot-iframe {
+      position: fixed;
+      bottom: 100px;
+      right: 20px;
+      width: 400px;
+      height: 500px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      display: none;
+      z-index: 999;
+    }
+  </style>
 </head>
 <body>
 
-<h1>SubMain1 Page</h1>
-<p>这里是 SubMain1 内容。</p>
+  <h1>SubMain Page</h1>
+  <p>这里是 SubMain 内容。</p>
 
-<!-- Botpress Button -->
-<button id="bot-button">💬</button>
+  <!-- Botpress Button -->
+  <button id="bot-button">💬</button>
 
-<!-- Botpress iframe -->
-<iframe id="bot-iframe"></iframe>
+  <!-- Botpress iframe -->
+  <iframe id="bot-iframe"></iframe>
 
-<script>
-  // 你要传给 Bot 的 entry
-  const entry = "submain"; // 这里就是 SubMain 标识
+  <!-- Botpress Webchat JS -->
+  <script src="https://cdn.botpress.cloud/webchat/v3/inject.js"></script>
+  <script>
+    const botButton = document.getElementById('bot-button');
+    const botIframe = document.getElementById('bot-iframe');
 
-  const botButton = document.getElementById('bot-button');
-  const botIframe = document.getElementById('bot-iframe');
+    // 这里传给 Bot 的 entry
+    const entry = "submain";
 
-  // Bot iframe URL，带 entry query 参数
-  const botUrl = `https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json&entry=${entry}`;
+    // iframe 指向 shareable.html + configUrl + extraData entry
+    const botUrl = `https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json&extraData=${encodeURIComponent(JSON.stringify({entry: entry}))}`;
 
-  let iframeLoaded = false;
+    let botLoaded = false;
 
-  botButton.addEventListener('click', () => {
-    if (!iframeLoaded) {
-      botIframe.src = botUrl;
-      iframeLoaded = true;
-    }
-
-    // 切换显示/隐藏
-    botIframe.style.display = botIframe.style.display === 'none' ? 'block' : 'none';
-  });
-
-  // ⚠️ 发送 entry 给 Bot（v3.5 方式）
-  window.addEventListener('message', (e) => {
-    if (!iframeLoaded) return;
-    if (e.origin.includes('botpress.cloud')) {
-      // iframe 加载完后发送 custom event
-      botIframe.contentWindow.postMessage({
-        type: 'botpress-webchat-event',
-        event: {
-          type: 'custom',
-          channel: 'web',
-          payload: { entry }
-        }
-      }, '*');
-    }
-  });
-</script>
+    botButton.addEventListener('click', () => {
+      if (!botLoaded) {
+        botIframe.src = botUrl;
+        botLoaded = true;
+      }
+      // toggle 显示/隐藏
+      botIframe.style.display = botIframe.style.display === 'none' ? 'block' : 'none';
+    });
+  </script>
 
 </body>
 </html>
