--- a/index.html
+++ b/index.html
@@ -1,61 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SubMain Page - Retail Pro Prism</title>
-  <style>
-    body { font-family: Arial, sans-serif; }
-    #bot-button {
-      position: fixed;
-      bottom: 90px;
-      right: 20px;
-      z-index: 1000;
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      background: #007bff;
-      color: #fff;
-      font-size: 24px;
-      border: none;
-      cursor: pointer;
-    }
-    #bot-iframe {
-      position: fixed;
-      bottom: 160px;
-      right: 20px;
-      width: 400px;
-      height: 500px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      display: none;
-      z-index: 999;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>SubMain - Retail Pro Prism</title>
+<link rel="icon" type="image/png" href="https://josephteo79.github.io/shared-library/v1.0/icon/favicon.png">
+
+<style>
+  body { font-family: Arial, sans-serif; padding: 20px; }
+  #bot-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background: #007bff;
+    color: white;
+    font-size: 24px;
+    border: none;
+    cursor: pointer;
+    z-index: 1000;
+  }
+</style>
 </head>
 <body>
-  <h1>SubMain Page</h1>
-  <p>这里是 SubMain 内容。</p>
 
-  <!-- Botpress 按钮 -->
-  <button id="bot-button">💬</button>
+<h1>SubMain Page</h1>
+<p>这里是 SubMain 内容。</p>
 
-  <!-- Botpress IFrame -->
-  <iframe
-    id="bot-iframe"
-    src="https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json&extraData=%7B%22entry%22%3A%22submain%22%7D"
-    width="400"
-    height="500"
-    style="border:none; display:none;">
-  </iframe>
+<!-- Botpress Webchat 按钮 -->
+<button id="bot-button">💬</button>
 
-  <script>
-    // 显示/隐藏 Bot
-    const btn = document.getElementById('bot-button');
-    const iframe = document.getElementById('bot-iframe');
-    btn.addEventListener('click', () => {
-      iframe.style.display = iframe.style.display === 'none' ? 'block' : 'none';
-    });
-  </script>
+<!-- Botpress JS -->
+<script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+<script>
+  // 这里设置要传给 Bot 的 entry
+  const entry = "SubMain"; // 这里就是你想显示的名字
+  let webchatInitialized = false;
+
+  const botButton = document.getElementById('bot-button');
+  botButton.addEventListener('click', () => {
+    if (!webchatInitialized) {
+      // 初始化 Webchat
+      window.botpressWebChat.init({
+        botId: "XSX123E9",                  // <-- 替换成你的 Bot ID
+        hostUrl: "https://messaging.botpress.cloud",
+        messagingUrl: "https://messaging.botpress.cloud",
+        showPoweredBy: false,
+        enableConversationDeletion: false,
+        extraData: { entry: entry }          // ✅ 关键：传给 Flow 的 entry
+      });
+      webchatInitialized = true;
+    }
+
+    // 打开 Bot
+    window.botpressWebChat.open();
+  });
+</script>
+
 </body>
 </html>
